--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/supabase": "^1.1.4",
     "nuxt": "^3.8.2",
+    "nuxt-purgecss": "^2.0.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
